--- a/src/app/city-select/city-select.component.html
+++ b/src/app/city-select/city-select.component.html
@@ -1,7 +1,7 @@
-<div class="row select-city">
-    <div class="container">
-      <div class="input-field m6 xl4 blue-text">
-        <select>
+<div class="row select-city" [ngStyle]="this.getBackgroundImage()">
+    <div class="container" >
+      <div class="input-field m6 xl4">
+        <select (change)="this.onSelectChange()">
           <option value="1" disabled selected>Guarapuava</option>
           <option value="2">Palmital</option>
           <option value="3">Comuni. Cavaco</option>
