--- a/src/app/company-search/company-search.component.html
+++ b/src/app/company-search/company-search.component.html
@@ -2,7 +2,10 @@
   <div class="container">
     <div class="input-field col s12">
       <input id="first_name" type="text" class="validate">
-      <label for="first_name">Buscar Empresa Cadastrada</label>
+      <label for="first_name" [style.color]="'white'">Buscar Empresa Cadastrada</label>
     </div>
+    <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+      <i class="material-icons dp48">search</i>
+    </button>
   </div>
 </div>
