adicionado componente de resultados da busca da empresa

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<app-city-select></app-city-select>
-<app-company-search></app-company-search>
+<app-menu></app-menu>
+<main>
+  <router-outlet></router-outlet>
+</main>
 <app-footer></app-footer>
