--- a/src/app/featured-item/featured-item.component.html
+++ b/src/app/featured-item/featured-item.component.html
@@ -5,9 +5,9 @@
     </div>
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4">
-        <a>{{name}}</a>
+        <a>{{company.name}}</a>
       </span>
-      <p>{{displayAddress()}}</p>
+      <p>{{company.name}}</p>
       <br />
       <div class="center">
         <a class="blue darken-3 btn">Agendar Horario</a>
