--- a/src/app/company-search/company-search.component.html
+++ b/src/app/company-search/company-search.component.html
@@ -4,9 +4,8 @@
       <input id="first_name" type="text" [(ngModel)] = "this.company" class="validate">
       <label for="first_name" [style.color]="'white'">Buscar Empresa Cadastrada</label>
     </div>
-    <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+    <button class="btn waves-effect waves-light" (click)="getCompany()">Submit
       <i class="material-icons dp48">search</i>
     </button>
-    {{this.company}}
   </div>
 </div>
