--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,5 +1,5 @@
 <!-- menu -->
-<div class="navbar-fixed" style="z-index: 1001 !important">
+<div class="navbar-fixed" style="z-index: 1001 !important;">
     <nav>
       <div class="nav-wrapper amber accent-4">
         <div class="container">
