--- a/src/app/company-search/company-search.component.css
+++ b/src/app/company-search/company-search.component.css
@@ -2,4 +2,11 @@
   padding: 10vmin 0;
   background-color: #7A8285;
 }
-
+button{
+  background-color: #033F7B!important;
+}
+.buscarServico{
+  color: #033F7B!important;
+  text-decoration: underline;
+  font-weight: 700;
+}
