--- a/src/app/company-search/company-search.component.html
+++ b/src/app/company-search/company-search.component.html
@@ -1,4 +1,4 @@
-<div class="row company-search mb-0">
+<div class="row company-search m-0">
   <div class="container">
     <div class="input-field col s12">
       <input id="first_name" type="text" [(ngModel)] = "this.company" class="validate">
